schildt_c++/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:50:03 **** Build of configuration Debug for project Hello_world ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
/bin/sh: 1: g++: not found
make: *** [main.o] Error 127
17:54:54 **** Incremental Build of configuration Debug for project Hello_world ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: Hello_world
Invoking: GCC C++ Linker
g++  -o "Hello_world"  ./main.o   
Finished building target: Hello_world
 
18:01:20 **** Incremental Build of configuration Debug for project Hello_world ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: Hello_world
Invoking: GCC C++ Linker
g++  -o "Hello_world"  ./main.o   
Finished building target: Hello_world
 
18:01:25 **** Incremental Build of configuration Debug for project Hello_world ****
make all 
make: Nothing to be done for `all'.
18:01:36 **** Incremental Build of configuration Debug for project Hello_world ****
make all 
make: Nothing to be done for `all'.
18:02:15 **** Incremental Build of configuration Debug for project Hello_world ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
../main.cpp: In function ‘int main()’:
../main.cpp:13:17: error: ‘system’ was not declared in this scope
  system ("pause");
                 ^
make: *** [main.o] Error 1
18:02:45 **** Incremental Build of configuration Debug for project Hello_world ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
../main.cpp: In function ‘int main()’:
../main.cpp:13:17: error: ‘system’ was not declared in this scope
  system ("pause");
                 ^
make: *** [main.o] Error 1
18:06:58 **** Incremental Build of configuration Debug for project Hello_world ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
../main.cpp: In function ‘int main()’:
../main.cpp:13:14: error: ‘cin’ was not declared in this scope
  std::cin << cin.get();
              ^
../main.cpp:13:14: note: suggested alternative:
In file included from ../main.cpp:8:0:
/usr/include/c++/4.8/iostream:60:18: note:   ‘std::cin’
   extern istream cin;  /// Linked to standard input
                  ^
make: *** [main.o] Error 1
18:12:46 **** Incremental Build of configuration Debug for project Hello_world ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: Hello_world
Invoking: GCC C++ Linker
g++  -o "Hello_world"  ./main.o   
Finished building target: Hello_world
 
18:12:58 **** Incremental Build of configuration Debug for project Hello_world ****
make all 
make: Nothing to be done for `all'.
18:13:07 **** Incremental Build of configuration Debug for project Hello_world ****
make all 
make: Nothing to be done for `all'.
